<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Huikka</string>

    <string name="lorem_ipsum" tools:ignore="ExtraTranslation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies mattis nulla eget fringilla. Integer facilisis leo nibh, sed viverra arcu condimentum nec. Pellentesque et consequat mi. In in mattis dui. Suspendisse elementum, ante sit amet fringilla rhoncus, nisl ante tempor mauris, sit amet sollicitudin magna nisl ornare lacus.</string>

    -- Button titles
    <string name="new_game">Uusi peli</string>
    <string name="continue_game">Jatka peliä</string>
    <string name="players">Pelaajat</string>
    <string name="ready">Valmis</string>
    <string name="start_game">Aloita peli</string>

    <string name="addPlayer">Lisää pelaaja</string>
    <string name="complete">Suorita</string>
    <string name="skip">Ohita</string>
    <string name="dare">Tehtävä</string>
    <string name="truth">Totuus</string>

    <string name="truthOrDate">"Totuus vai tehtävä?"</string>
    <string name="continue_playing">"Jatka"</string>
    <string name="name">Nimi</string>
    <string name="yes">Kyllä</string>
    <string name="no">Ei</string>
    <string name="save_and_quit">Tallenna ja palaa päävalikkoon</string>
    <string name="continue_">Jatka</string>
    <string name="cancel">Peruuta</string>
    <string name="quit_confirm">Haluatko varmasti lopettaa?</string>
    <string name="profile_picture">Profiilikuva</string>
    <string name="delete">Poista</string>
    <string name="loading">Ladataan…</string>

    -- UI Sentences
    <string name="no_players">Sinulla ei ole yhtään pelaajaa lisättynä!</string>
    <string name="all_players">Tässä kaikki pelaajat!</string>
    <string name="select_players">Valitse peliin osallistuvat pelaajat</string>

    <string name="points_to_win">Pisteitä voittoon</string>
    <string name="select_categories">Valitse korttikategoriat</string>
    <string name="manage_players">Hallinnoi pelaajia</string>
    <string name="leaderboard">Pistetaulukko</string>
    <string name="timed_card">Ajastettu tehtävä alkaa</string>
    <string name="times_up">Aika loppui</string>
</resources>